# DataModule

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  setup.py  vcpkg.json
.github/workflows/: coverage.yml  python-wheels.yml  python.yml  sanitisers.yml  static-analysis.yml  unit-macos.yml  unit-ubuntu.yml  unit-windows.yml  wheels.yml
cmake/: AsmcDataModuleConfig.cmake  CompilerWarnings.cmake  FindSphinx.cmake  ProjectSettings.cmake  Sanitisers.cmake  StaticAnalysers.cmake  asmc-data-module-config.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst
docs/pages/: file-formats.rst
notebooks/: BedMatrixType.ipynb  HapsMatrixType.ipynb  python_example.ipynb
scripts/: install_dependencies.bat  install_dependencies.sh  vcpkg_dependencies
src/: BedMatrixType.cpp  BedMatrixType.hpp  CMakeLists.txt  EigenTypes.hpp  FileFormats.hpp  GeneticMap.cpp  GeneticMap.hpp  HapsMatrixType.cpp  HapsMatrixType.hpp  PlinkMap.cpp  PlinkMap.hpp  Utils.cpp  Utils.hpp
src/python_bindings/: bindings.cpp
src/utils/: EigenTypes.hpp  FileUtils.cpp  FileUtils.hpp  StringUtils.cpp  StringUtils.hpp  VectorUtils.hpp
test/: CMakeLists.txt  TestBedMatrixType.cpp  TestGeneticMap.cpp  TestHapsMatrixType.cpp  TestPbwtSandpit.cpp  TestPlinkMap.cpp  TestUtils.cpp  catch_main.cpp
test/data/bedbimfam/: real_example.bed  real_example.bim  real_example.fam
test/data/genetic_map/: 3_col.map  3_col_header.map  4_col.map  4_col_header.map  bad_genetic_pos.map  bad_physical_pos.map  genetic_positions.map  inconsistent_num_cols.map  physical_positions.map  spaces.map
test/data/haps_plus_samples/: bad_header_1.samples  bad_header_2.samples  not_boolean.hap  test.hap  test.map  test.samples  too_few_rows.hap  too_many_rows.hap
test/data/plink_map/: 3_col.map  4_col.map  five_cols.map  genetic_positions.map  no_unsigned.map  physical_positions.map  spaces.map
test/python/: test_bindings.py
test/utils/: TestFileUtils.cpp  TestStringUtils.cpp  TestVectorUtils.cpp
